--- a/BulletinBoardServer/helloendpoints/pom.xml
+++ b/BulletinBoardServer/helloendpoints/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>helloendpoints</artifactId>
 
     <properties>
-        <app.id>your-app-id</app.id>
+        <app.id>BulletinBoard-1230</app.id>
         <app.version>1</app.version>
         <appengine.version>1.9.32</appengine.version>
         <gcloud.plugin.version>2.0.9.74.v20150814</gcloud.plugin.version>
