bug with selecting group for message fixed.

--- a/BulletinBoardApp/BulletinBoard/BulletinBoard/Info.plist
+++ b/BulletinBoardApp/BulletinBoard/BulletinBoard/Info.plist
@@ -70,6 +70,8 @@
 	<string>Bulletin Board</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>facebook.com</key>
